# hindsight-clients/go/model_purge_invalidated_response.go
@@ -1,159 +1,0 @@
-/*
-Hindsight HTTP API
-
-HTTP API for Hindsight
-
-API version: 0.7.2
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package hindsight
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the PurgeInvalidatedResponse type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &PurgeInvalidatedResponse{}
-
-// PurgeInvalidatedResponse Response model for the purge-invalidated endpoint.
-type PurgeInvalidatedResponse struct {
-	// Number of invalidated memory units permanently deleted.
-	PurgedCount int32 `json:"purged_count"`
-}
-
-type _PurgeInvalidatedResponse PurgeInvalidatedResponse
-
-// NewPurgeInvalidatedResponse instantiates a new PurgeInvalidatedResponse object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewPurgeInvalidatedResponse(purgedCount int32) *PurgeInvalidatedResponse {
-	this := PurgeInvalidatedResponse{}
-	this.PurgedCount = purgedCount
-	return &this
-}
-
-// NewPurgeInvalidatedResponseWithDefaults instantiates a new PurgeInvalidatedResponse object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewPurgeInvalidatedResponseWithDefaults() *PurgeInvalidatedResponse {
-	this := PurgeInvalidatedResponse{}
-	return &this
-}
-
-// GetPurgedCount returns the PurgedCount field value
-func (o *PurgeInvalidatedResponse) GetPurgedCount() int32 {
-	if o == nil {
-		var ret int32
-		return ret
-	}
-
-	return o.PurgedCount
-}
-
-// GetPurgedCountOk returns a tuple with the PurgedCount field value
-// and a boolean to check if the value has been set.
-func (o *PurgeInvalidatedResponse) GetPurgedCountOk() (*int32, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.PurgedCount, true
-}
-
-// SetPurgedCount sets field value
-func (o *PurgeInvalidatedResponse) SetPurgedCount(v int32) {
-	o.PurgedCount = v
-}
-
-func (o PurgeInvalidatedResponse) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o PurgeInvalidatedResponse) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["purged_count"] = o.PurgedCount
-	return toSerialize, nil
-}
-
-func (o *PurgeInvalidatedResponse) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"purged_count",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varPurgeInvalidatedResponse := _PurgeInvalidatedResponse{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varPurgeInvalidatedResponse)
-
-	if err != nil {
-		return err
-	}
-
-	*o = PurgeInvalidatedResponse(varPurgeInvalidatedResponse)
-
-	return err
-}
-
-type NullablePurgeInvalidatedResponse struct {
-	value *PurgeInvalidatedResponse
-	isSet bool
-}
-
-func (v NullablePurgeInvalidatedResponse) Get() *PurgeInvalidatedResponse {
-	return v.value
-}
-
-func (v *NullablePurgeInvalidatedResponse) Set(val *PurgeInvalidatedResponse) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullablePurgeInvalidatedResponse) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullablePurgeInvalidatedResponse) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullablePurgeInvalidatedResponse(val *PurgeInvalidatedResponse) *NullablePurgeInvalidatedResponse {
-	return &NullablePurgeInvalidatedResponse{value: val, isSet: true}
-}
-
-func (v NullablePurgeInvalidatedResponse) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullablePurgeInvalidatedResponse) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
